--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_notification">Notification</string>
     <string name="menu_cart">Cart</string>
+    <string name="menu_QR">QR</string>
     <string name="menu_profile">Profile</string>
     <string name="menu_history">History</string>
     <string name="menu_logout">Salir</string>
